--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 POLÍTICA DE PRIVACIDAD PARA MyTeamApp.
 
 ===================== USO DE INFORMACIÓN DE CUENTAS DE GOOGLE =======================================
-Únicamente se almacena en nuestras bases de datos el nombre de usuario y nombre asociado a dicha cuenta.
+Únicamente se almacena en nuestras bases de datos el nombre de usuario y email asociado a dicha cuenta.
 En ningún caso se obtienen, envían o guardan contraseñas del usuario.
+Esta información se almacena con el único fin de identificar a los usuarios.
 
 =================================== USO DE DATOS ====================================================
 El desarrollador de la aplicación en ningún momento se hace responsable de los datos que se introducen
